...
                android:layout_marginLeft="@dimen/padding_small"
                android:text="@{item.title}"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Title" />

            <TextView
                android:id="@+id/description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{item.description}"
                android:textSize="@dimen/text_size_small"
                app:layout_constraintStart_toStartOf="@id/title"
                app:layout_constraintEnd_toStartOf="@id/location"
                app:layout_constraintTop_toBottomOf="@id/title"
                tools:text="Description" />

            <TextView
                android:id="@+id/location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
...
